# cml

./: .bashrc  .gitattributes  .gitignore  CHANGELOG  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
models/utilities/: CMakeLists.txt  README.md
models/utilities/bin_counter/: README.md
models/utilities/bin_counter/docs/: bin_counter.odt  bin_counter_presentation.pptx
models/utilities/bin_counter/include/: bin_counter.hh  proximity_counter.hh  target_counter.hh
models/utilities/bin_counter/src/: bin_counter.cc  proximity_counter.cc  target_counter.cc
models/utilities/buffers/: README.md
models/utilities/buffers/docs/: README  buffers.odt
models/utilities/buffers/include/: simple_ring_buffer.hh  tagged_ring_buffer.hh
models/utilities/cml_message/: README.md
models/utilities/cml_message/docs/: cml_message.tex  cml_message_VV.odp
models/utilities/cml_message/include/: cml_message.hh
models/utilities/cml_message/src/: cml_message.cc
models/utilities/color_string/: README.md
models/utilities/color_string/docs/: color_string.odt  color_string_presentation.pptx
models/utilities/color_string/include/: color_string.hh
models/utilities/constraint_check/: README.md
models/utilities/constraint_check/docs/: constraint_check.odt
models/utilities/constraint_check/include/: constraint.hh  constraint_enum.hh  constraint_set.hh  constraint_test.hh  constraint_test_templates.hh  constraint_test_timed_templates.hh  interval_constraint.hh  threshold_constraint.hh  valset_constraint.hh
models/utilities/constraint_check/src/: constraint.cc  constraint_set.cc  constraint_test.cc  constraint_test_templates.cc  constraint_test_timed_templates.cc
models/utilities/convert_string/: README.md
models/utilities/convert_string/docs/: convert_string.tex  convert_string_VV.odp
models/utilities/convert_string/include/: convert_string.hh
models/utilities/double_to_words/: README.md
models/utilities/double_to_words/docs/: double_to_words.odt  double_to_words_C.odt
models/utilities/double_to_words/include/: convert_double_to_words.hh  double_to_words.h
models/utilities/double_to_words/src/: convert_double_to_uint_words.cc  double_to_uint_words.c
models/utilities/enhanced_logging/: README.md
models/utilities/enhanced_logging/docs/: DELETE_development_notes.odt  DELETE_enhanced_logging.odt  cml.sty  enhanced_logging.odt  enhanced_logging.tex
models/utilities/enhanced_logging/include/: base_logging_group.hh  base_logging_variable.hh  enhanced_logging_manager.hh  enhanced_logging_variable.hh  serial_logging_group.hh  serial_logging_variable.hh  summary_logging_condition.hh  summary_logging_group.hh  summary_logging_variable.hh
models/utilities/enhanced_logging/src/: base_logging_group.cc  enhanced_logging_manager.cc  enhanced_logging_variable.cc  log_hdf5.py  serial_logging_group.cc  serial_logging_variable.cc  summary_logging_condition.cc  summary_logging_group.cc  summary_logging_variable.cc
models/utilities/env_utils/docs/: env_utils.tex
models/utilities/env_utils/include/: env_utils.h
models/utilities/fault_arch/: README.md
models/utilities/fault_arch/docs/: fault_arch.tex  fault_arch_VV.odp
models/utilities/fault_arch/include/: sSensorFaults.hh
models/utilities/fault_arch/src/: sSensorFaults.cc
models/utilities/fault_management/: README.md
models/utilities/fault_management/docs/: fault_management.tex  fault_management_VV.odp
models/utilities/fault_management/include/: fault.hh  fault_bias.hh  fault_function.hh  fault_function_parameter.hh  fault_manager.hh  fault_overwrite.hh  fault_random_walk.hh  fault_scale.hh  fault_stale.hh  fault_white_noise.hh  independent_variable.hh  rand_number.hh  trigger.hh  trigger_group.hh  untyped_variable.hh
models/utilities/fault_management/src/: fault.cc  fault_function.cc  fault_function_parameter.cc  fault_manager.cc  fault_overwrite.cc  independent_variable.cc  rand_number.cc  trigger_group.cc
models/utilities/finite_difference/: README.md
models/utilities/finite_difference/doc/: index.adoc  index.odt
models/utilities/finite_difference/include/: finite_difference.hh
models/utilities/finite_difference/src/: finite_difference.cc
models/utilities/math_utils/: README.md
models/utilities/math_utils/docs/: math_utils.tex  math_utils_presentation.pptx  proto.tex  std_array_ops.md
models/utilities/math_utils/include/: ellipsoid_intersection.hh  math_utils.hh  math_utils_private.hh  quadratic_solver.hh  std_array_ops.hh
models/utilities/math_utils/src/: math_utils.cc  quadratic_solver.cc
models/utilities/math_utils/verif/: coding_standard_check.txt
models/utilities/polygon_enclosure/: README.md
models/utilities/polygon_enclosure/docs/: cml.sty  polygon_enclosure.tex
models/utilities/polygon_enclosure/include/: polygon_enclosure.hh  polygon_enclosure_sphere.hh
models/utilities/sim_speed_monitor/: README.md
models/utilities/sim_speed_monitor/docs/: sim_speed_monitor.tex  sim_speed_monitor_V&V.odp
models/utilities/sim_speed_monitor/include/: sim_speed_monitor.hh
models/utilities/subscriptions/: README.md
models/utilities/subscriptions/docs/: subscriptions.odt  subscriptions_presentation.pptx
models/utilities/subscriptions/include/: subscriptions.hh
models/utilities/subscriptions/src/: subscriptions.cc
models/utilities/subscriptions/verif/: coding_standard_check.txt
models/utilities/table_interp/: README.md
models/utilities/table_interp/docs/: table_interp.odt
models/utilities/table_interp/include/: osiris_math.h  osiris_math_impl.h  table_angle_impl.h  table_interp.h  table_interp_helper.h  table_interp_impl.h
models/utilities/table_interp/verif/: README
models/utilities/table_interp_cpp/: README.md
models/utilities/table_interp_cpp/docs/: table_interp.tex
models/utilities/table_interp_cpp/include/: abstract_table_lookup.hh  generic_multi_input_table.hh  (+10 more)
models/utilities/trick_logging/: README.md
models/utilities/xml_helper/: README.md
trickified/: .gitignore  CMakeLists.txt  S_source.hh  makefile
(+3176 files in other folders)
