[project]
name = "cml"
version = "0.2.0"
description = "The JSC Engineering EG Division Common Model Library"
dependencies = [
    "gcovr",
    "numpy",
    "psutil",
    "pyyaml",
]

[project.urls]
Documentation = "https://github.com/nasa/cml/wiki"
Issues = "https://github.com/nasa/cml/issues"
Source = "https://github.com/nasa/cml"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
