include(AddCMLLibrary)
add_cml_library(
    NAME
        utilities

    HEADERS
        bin_counter/include/bin_counter.hh
        bin_counter/include/proximity_counter.hh
        bin_counter/include/target_counter.hh
        buffers/include/simple_ring_buffer.hh
        buffers/include/tagged_ring_buffer.hh
        cml_message/include/cml_message.hh
        color_string/include/color_string.hh
        constraint_check/include/constraint.hh
        constraint_check/include/constraint_enum.hh
        constraint_check/include/constraint_set.hh
        constraint_check/include/constraint_test.hh
        constraint_check/include/constraint_test_templates.hh
        constraint_check/include/constraint_test_timed_templates.hh
        constraint_check/include/interval_constraint.hh
        constraint_check/include/threshold_constraint.hh
        constraint_check/include/valset_constraint.hh
        convert_string/include/convert_string.hh
        double_to_words/include/convert_double_to_words.hh
        double_to_words/include/double_to_words.h
        enhanced_logging/include/base_logging_group.hh
        enhanced_logging/include/base_logging_variable.hh
        enhanced_logging/include/enhanced_logging_manager.hh
        enhanced_logging/include/enhanced_logging_variable.hh
        enhanced_logging/include/serial_logging_group.hh
        enhanced_logging/include/serial_logging_variable.hh
        enhanced_logging/include/summary_logging_condition.hh
        enhanced_logging/include/summary_logging_group.hh
        enhanced_logging/include/summary_logging_variable.hh
        env_utils/include/env_utils.h
        fault_arch/include/sSensorFaults.hh
        fault_management/include/fault.hh
        fault_management/include/fault_bias.hh
        fault_management/include/fault_function.hh
        fault_management/include/fault_function_parameter.hh
        fault_management/include/fault_manager.hh
        fault_management/include/fault_overwrite.hh
        fault_management/include/fault_random_walk.hh
        fault_management/include/fault_scale.hh
        fault_management/include/fault_stale.hh
        fault_management/include/fault_white_noise.hh
        fault_management/include/independent_variable.hh
        fault_management/include/rand_number.hh
        fault_management/include/trigger.hh
        fault_management/include/trigger_group.hh
        fault_management/include/untyped_variable.hh
        finite_difference/include/finite_difference.hh
        math_utils/include/ellipsoid_intersection.hh
        math_utils/include/math_utils.hh
        math_utils/include/math_utils_private.hh
        math_utils/include/quadratic_solver.hh
        math_utils/include/std_array_ops.hh
        polygon_enclosure/include/polygon_enclosure.hh
        polygon_enclosure/include/polygon_enclosure_sphere.hh
        sim_speed_monitor/include/sim_speed_monitor.hh
        subscriptions/include/subscriptions.hh
        table_interp/include/osiris_math.h
        table_interp/include/osiris_math_impl.h
        table_interp/include/table_angle_impl.h
        table_interp/include/table_interp.h
        table_interp/include/table_interp_helper.h
        table_interp/include/table_interp_impl.h
        table_interp_cpp/include/abstract_table_lookup.hh
        table_interp_cpp/include/generic_multi_input_table.hh
        table_interp_cpp/include/generic_single_input_table.hh
        table_interp_cpp/include/quaternion_spherical_interpolator.hh
        table_interp_cpp/include/simple_table_lookup.hh
        table_interp_cpp/include/single_input_table_for_angles.hh
        table_interp_cpp/include/single_input_table_for_quaternions.hh
        table_interp_cpp/include/single_input_table_var_with_deriv.hh
        table_interp_cpp/include/table_independent_variable.hh
        table_interp_cpp/include/table_lookup__transpose_data.hh
        table_interp_cpp/include/table_lookup_set.hh
        table_interp_cpp/include/table_type_defs.hh
        trick_logging/include/trick_logging.hh
        xml_helper/include/xml_helper.hh

    SOURCES
        bin_counter/src/bin_counter.cc
        bin_counter/src/proximity_counter.cc
        bin_counter/src/target_counter.cc
        cml_message/src/cml_message.cc
        constraint_check/src/constraint.cc
        constraint_check/src/constraint_set.cc
        constraint_check/src/constraint_test.cc
        constraint_check/src/constraint_test_templates.cc
        constraint_check/src/constraint_test_timed_templates.cc
        double_to_words/src/convert_double_to_uint_words.cc
        double_to_words/src/double_to_uint_words.c
        enhanced_logging/src/base_logging_group.cc
        enhanced_logging/src/enhanced_logging_manager.cc
        enhanced_logging/src/enhanced_logging_variable.cc
        enhanced_logging/src/serial_logging_group.cc
        enhanced_logging/src/serial_logging_variable.cc
        enhanced_logging/src/summary_logging_condition.cc
        enhanced_logging/src/summary_logging_group.cc
        enhanced_logging/src/summary_logging_variable.cc
        fault_arch/src/sSensorFaults.cc
        fault_management/src/fault.cc
        fault_management/src/fault_function.cc
        fault_management/src/fault_function_parameter.cc
        fault_management/src/fault_manager.cc
        fault_management/src/fault_overwrite.cc
        fault_management/src/independent_variable.cc
        fault_management/src/rand_number.cc
        fault_management/src/trigger_group.cc
        finite_difference/src/finite_difference.cc
        math_utils/src/math_utils.cc
        math_utils/src/quadratic_solver.cc
        subscriptions/src/subscriptions.cc
        table_interp_cpp/src/abstract_table_lookup.cc
        table_interp_cpp/src/generic_multi_input_table.cc
        table_interp_cpp/src/generic_single_input_table.cc
        table_interp_cpp/src/quaternion_spherical_interpolator.cc
        table_interp_cpp/src/simple_table_lookup.cc
        table_interp_cpp/src/single_input_table_for_angles.cc
        table_interp_cpp/src/single_input_table_for_quaternions.cc
        table_interp_cpp/src/single_input_table_var_with_deriv.cc
        table_interp_cpp/src/table_independent_variable.cc
        table_interp_cpp/src/table_lookup__transpose_data.cc
        table_interp_cpp/src/table_lookup_set.cc
        xml_helper/src/xml_helper.cc
)

target_link_libraries(cml_utilities PUBLIC LibXml2::LibXml2)

include(AddCMLTests)
add_cml_tests(
    NAME
        utilities

    SOURCES
        table_interp_cpp/test/table_independent_variable_test.cc
)
